src/tests/fixtures/input_type_one_of/oneOfMemberHasMultipleFields.invalid.ts
/**
 * @gqlInput
 * @oneOf
 */
export type Greeting =
  | { firstName: string }
  | { lastName: string; nickName: string };
